--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: rust
 cache: cargo
+before_script:
+  - sudo apt -y install libgtk-3-dev
+  - rustup component add clippy
 script:
   - cargo build
   - cargo clippy -- -D warnings
